﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-12-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php: wrong quote
      thanks to Matt "Cyber Dog" LaPlante
    * libraries/display_import.lib.php: missing '/' for closing div tag
    * libraries/display_export.lib.php: no name attribute for sup tag

2005-12-05 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php: added PMA_array_merge_recursive()
    * libraries/Config.class.php:
      - make use of PMA_array_merge_recursive()
      - correctly reset config variables on changes in config.inc.php
    * sql.php: hide edit/delete links for information_schema (bug #1373201)
    * db_operations.php: revised (style, code, xhtml output)

2005-12-05 Michal Čihař  <michal@cihar.com>
    * many files: Use same script tag, use CDATA for scripts (RFE #995065).
    * export.php: Check for correct parameters.
    * import.php, lang/*, libraries/import/csv.php, libraries/import/ldi.php:
      Fix import of some CSV files (bug #1373731), provide better error
      messages.
    * lang/czech: Update.
    * import.php, libraries/display_import.lib.php: Fix import layout (bug
      #1370416), prefer recoding of strings over changing MySQL charset as in
      this case we can show resulting queries.

2005-12-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/catalan update, thanks to Xavier Navarro (xavin).
    * server_privileges.php: do not use UNION DISTINCT, as it's not allowed
      before MySQL 4.0.17, and because "it does nothing" (cf manual)
      ### 2.7.0 released

2005-12-04 Michal Čihař  <michal@cihar.com>
    * pdf_schema.php: Bad copy and paste, here should be iso-8859-2 (thanks
      Marc!).
    * libraries/import/csv.php: Fix use of escaped chars (bug #1371249).
    * lang/czech: Update.

2005-12-03 Marc Delisle  <lem9@users.sourceforge.net>