@@ -10,6 +10,7 @@ $Source$
       thanks to Matt "Cyber Dog" LaPlante
     * libraries/display_import.lib.php: missing '/' for closing div tag
     * libraries/display_export.lib.php: no name attribute for sup tag
+    * server_engines.php: revised (style, code, xhtml output)
 
 2005-12-05 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * libraries/common.lib.php: added PMA_array_merge_recursive()
